manifests/music/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music
  annotations:
    argocd.argoproj.io/sync-wave: "0"
