manifests/music/30-lidarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: music
  labels:
    app.kubernetes.io/name: lidarr
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: kube002
      securityContext:
        fsGroup: 1000
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:develop-3.1.2.4938-ls242
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /music
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: music
          persistentVolumeClaim:
            claimName: music-library
