manifests/music/21-navidrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: music
  labels:
    app.kubernetes.io/name: navidrome
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - name: http
      port: 4533
      targetPort: http
      protocol: TCP
