manifests/music/31-lidarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: music
  labels:
    app.kubernetes.io/name: lidarr
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: http
      protocol: TCP
